--- a/Main/Main.resx
+++ b/Main/Main.resx
@@ -148,8 +148,124 @@
     <value>574, 53</value>
   </metadata>
   <metadata name="SyntaxErrorChecker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>844, 58</value>
+    <value>876, 53</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>737, 53</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACa
+        GAAAAk1TRnQBSQFMAgEBAwEAAZgBAAGYAQABFAEAARQBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFQ
+        AwABFAMAAQEBAAEgBgABGSYAAxMBGgNHAYICWQFcAcMCXwFmAeUCSAGBAfYBMwEtAaUB+gJeAWsB7QNe
+        AdICUQFTAaIDKwFCeAADEQEWA0cBgANcAcECagFhAeYBjgGNAWgB+QK+AVQB/QJrAWUB7wNhAdEDUgGg
+        AysBQXAAAwQBBQM3AVoBIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wNSAaMDEAEVaAADBQEGAzkBXQGWAZQBXwH7
+        AcYBvgFkAf8BxwG+AWQB/wHGAb4BZAH/AcYBvgFkAf8BxgG+AWQB/wHGAb4BYwH/AcYBvgFjAf8BxgG+
+        AWMB/wG+Ab0BUgH9A1IBoQMSARhkAAMGAQcCUwFUAakBMwEtAaUB+gEgARgB8AH/ASABGAHwAf8BIAEY
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/
+        ASABGAHwAf8CXQFiAdwDFgEdYAADBgEIA1MBogGOAYwBaAH5AcUBuwFhAf8BxgG6AWEB/wHFAboBYQH/
+        AcUBugFhAf8BxQG7AWEB/wHGAboBYQH/AcYBuwFhAf8BxQG7AWEB/wHFAbsBYQH/AcUBugFhAf8BxQG6
+        AWEB/wNhAdYDGAEgYAADSQGGATMBKwHKAf4BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEg
+        ARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wJeAWUB3QMQARUQAAFHAXMBgwH1AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/
+        AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AVQCVgGrDAAEAgNJ
+        AYUBnQGIAV8B/AHFAbcBXwH/AcUBtwFfAf8BxQG3AV8B/wHFAbcBXwH/AcUBtwFfAf8BxQG2AV8B/wHF
+        AbYBXgH/AcUBtwFfAf8BxQG3AV8B/wHFAbcBXwH/AcUBtgFfAf8BxQG3AV8B/wHFAbcBXwH/AmIBXgHX
+        AxIBGFgAAzUBVQEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEg
+        ARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/AlEBUgGkEAABBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHB
+        Av8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8DSwGNDAADMwFS
+        AcQBsgFcAf8BxAGzAVwB/wHEAbIBXAH/AcUBsgFcAf8BxAGyAVwB/wHEAbMBXAH/AcQBsgFcAf8BxAGz
+        AVwB/wHEAbIBXAH/AcQBswFcAf8BxAGzAVwB/wHEAbMBXAH/AcQBsgFcAf8BxAGyAVwB/wHEAbMBXAH/
+        AcQBswFcAf8DUgGhWAACWwFdAcUBIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEdARUB8AH/
+        AREBCQHvAf8BHAEUAfAB/wEhARkB8AH/ASABGAHwAf8BHwEXAfAB/wESAQkB7wH/ARgBEAHvAf8BIQEZ
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AysBQgwAAzQBVAEHAcEC/wEHAcEC/wEH
+        AcEC/wEHAcEC/wEHAcEC/wEhAXoBpgH/ATcBQAFdAf8BBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BBwHB
+        Av8BRwFzAYMB9QMGAQgMAAJcAVkBwwHEAa4BWQH/AcMBrgFZAf8BwwGuAVkB/wHEAa4BWQH/AcsBuQFx
+        Af8B2QHMAZgB/wHDAa4BWQH/AcMBrgFZAf8BxAGuAVkB/wHEAa4BWQH/AcgBtQFnAf8BzwG+AXwB/wHD
+        Aa4BWQH/AcMBrgFZAf8BxAGuAVkB/wHEAa4BWQH/Ab4BrgFHAf0DKwFBUAADFgEdASABGAHwAf8BIAEY
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEnASAB8QH/AcIBwAH7Af8BMgExAfEB/wEbARQB8AH/
+        ASEBGQHwAf8BFgETAe8B/wGtAasB+gH/AU0BRwHzAf8BGAERAfAB/wEgARgB8AH/ASABGAHwAf8BIAEY
+        AfAB/wEgARgB8AH/AlEBUgGkDAAEAgNiAeEBBwHBAv8BBwHBAv8BBwHBAv8BBwHBAv8BCAG+AfsB/wEN
+        Aa8B6QH/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AQcBwQL/AzwBZgwAAxUBHAGVAY8BXgH7AcMBqQFW
+        Af8BwgGpAVYB/wHDAakBVgH/AcIBqQFWAf8B7wHoAdYB/wH9AfwB+QH/AdQBwgGHAf8BwgGpAVYB/wHD
+        AakBVgH/AcsBtQFwAf8B+AH1Ae4B/wH5AfYB7wH/AcgBsAFmAf8BwwGpAVYB/wHCAakBVgH/AcMBqQFX
+        Af8BwgGpAVYB/wNRAZ9QAANNAZIBIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEfARcB8AH/
+        AUcBQwHzAf8C/gL/AucB/QH/ATYBMwHxAf8BBgEEAe0B/wGsAaoB+QX/AYgBhgH3Af8BEgEMAe8B/wEg
+        ARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AlsBXwHTEAADKQE9AQcBwQL/AQcBwQL/AQcBwQL/
+        AQcBwQL/ARUBmgHOAf8BNwFAAV0B/wEHAcEC/wEHAcEC/wEHAcEC/wEHAcEC/wE9AYwBoQH5EAADSwGN
+        AcIBpQFTAf8BwgGlAVIB/wHCAaUBUgH/AcIBpAFTAf8BwgGlAVMB/wHNAbYBdwH/AfoB+AHzAf8B/QH8
+        AfkB/wHYAcYBlAH/AcUBqQFgAf8B9QHxAeYB/wH9AfwB+wH/AdcBxAGTAf8BwgGlAVQB/wHCAaUBUwH/
+        AcIBpQFTAf8BwQGlAVMB/wHCAaUBUgH/AmEBXQHRUAACXAFhAdYBIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/ARYBEAHvAf8BQQE/AfIB/wHtAewB/gH/AdUB1AH8Af8BmAGWAfgB/wL9
+        Av8BkwGRAfgB/wESAQ8B7wH/ASEBGQHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wJZ
+        AW8B7xQAAVwCYQHZAQcBwQL/AQcBwQL/AQcBwQL/ARYBlwHKAf8BNwFAAV0B/wEHAcEC/wEHAcEC/wEH
+        AcEC/wEHAcEC/wMTARoQAAJhAVwB1gHBAaABTwH/AcEBoAFPAf8BwQGfAU8B/wHBAZ8BTwH/AcEBoAFQ
+        Af8BwQGgAU8B/wHNAbIBdQH/AfkB9gHwAf8B+wH5AfYB/wH4AfUB7gH/AfwB+wH4Af8B2wHIAZ0B/wHB
+        AaABUQH/AcEBoAFPAf8BwQGgAU8B/wHBAaABTwH/AcEBnwFPAf8BwQGgAU8B/wFrAWcBWQHvUAACUwF7
+        AfQBIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASEBGQHwAf8BHgEWAe8B/wEh
+        ARsB8AH/AvUB/gX/AXUBcAH2Af8BBwEFAe4B/wEiARkB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/
+        ASABGAHwAf8BIAEYAfAB/wIhAakB+xgAAQcBwQL/AQcBwQL/AQcBwQL/ARwBhwG2Af8BNwFAAV0B/wEH
+        AcEC/wEHAcEC/wEHAcEC/wFXAlkBvBQAAY0BggFMAfkBwAGaAUwB/wHAAZoBTAH/AcABmwFMAf8BwAGa
+        AUwB/wHAAZoBTAH/AcABmgFMAf8BwAGbAUwB/wHSAbgBhwn/AdwByAGeAf8BwAGaAUwB/wHAAZoBTAH/
+        AcABmwFMAf8BwAGaAUwB/wHAAZsBTAH/AcABmwFMAf8BwAGaAUwB/wG+AZkBQAH9UAACYQFsAesBIAEY
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AR8BFwHwAf8BFwEUAe8B/wGnAaUB+QH/
+        AfkB+AL/AfcB9gH+Af8B0wHSAfwB/wE0ATIB8QH/ARsBFAHwAf8BIQEZAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/AVEBUAGPAfcYAAFLAkwBjwEHAcEC/wEHAcEC/wEcAYcBtgH/ATcBQAFd
+        Af8BBwHBAv8BBwHBAv8BKwGUAb4B/AMUARsUAAFyAXABYwHxAb8BlgFJAf8BvwGWAUkB/wG/AZYBSQH/
+        Ab8BlQFJAf8BvwGWAUkB/wG/AZUBSAH/AcsBqgFvAf8B9wHzAesB/wH8AfoB+AH/Af0B+wH6Af8B+wH5
+        AfYB/wHWAb0BjgH/Ab8BlQFIAf8BvwGWAUkB/wG/AZYBSQH/Ab8BlQFJAf8BvwGWAUkB/wG/AZUBSQH/
+        AY0BgQFJAflQAAJZAVwBwwEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BGwEY
+        Ae8B/wGnAaUB+QH/Av4C/wGJAYYB9wH/AR4BGgHvAf8B7wHuAf4B/wHnAeYB/QH/AS8BLgHwAf8BHQEV
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AlwBZgHnGAADBQEGAUcBcwGDAfUBBwHB
+        Av8BHQGDAbEB/wE3AUABXQH/AQcBwQL/AQcBwQL/AVMCVAGmGAADWgG/Ab4BkAFGAf8BvwGQAUUB/wG+
+        AZABRQH/Ab8BkAFGAf8BvwGQAUYB/wHKAaUBawH/AfoB9wHzAf8B/AH7AfkB/wHWAbkBiwH/AcUBngFi
+        Af8B9wHyAeoB/wH8AfsB+QH/Ac8BrgF5Af8BvgGQAUUB/wG+AZABRgH/Ab4BkAFGAf8BvgGQAUUB/wG+
+        AZABRQH/AmYBXwHlUAADPgFqASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BHQEVAfAB/wFd
+        AVoB9AX/AX0BegH2Af8BEgEOAe4B/wEcARUB7wH/AUABPQHyBf8BogGfAfgB/wEOAQkB7wH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8CWQFcAcMcAAE9Aj4BaQEHAcEC/wEHAcEC/wEHAcEC/wEH
+        AcEC/wErAZQBvgH8HAADPAFkAb0BjAFCAf8BvQGMAUIB/wG9AYwBQgH/Ab0BjAFCAf8BvQGMAUIB/wHt
+        AeEB0QH/AfwB+wH5Af8B0AGsAXoB/wG+AYwBQQH/Ab4BjAFCAf8BygGiAWsB/wH6AfcB8wH/AfgB9AHw
+        Af8BxAGZAVsB/wG9AYwBQgH/Ab0BjAFCAf8BvQGMAUIB/wG+AYwBQgH/AlwBWQHBUAADBgEIAVgBVwFt
+        AfABIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIQEZAfAB/wETAQ4B7wH/AU4BSgHzAf8BFwETAe8B/wEh
+        ARkB8AH/ASEBGQHwAf8BFgEQAe8B/wFBATsB8gH/ARoBFwHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/A0kBhiAAAVQBagFvAfABBwHBAv8BBwHBAv8BBwHBAv8DNAFTHAADBgEI
+        AWwBZQFdAewBvQGHAT8B/wG9AYcBPwH/Ab0BhwE/Af8BvQGHAT8B/wHFAZcBXAH/AdQBsgGIAf8BvAGH
+        AT8B/wG9AYcBPwH/Ab0BhwE/Af8BvQGHAT8B/wHIAZwBZAH/AcoBoAFsAf8BvQGHAT8B/wG9AYcBPwH/
+        AbwBhwE+Af8BvAGHAT8B/wG9AYcBPwH/AkcBRgGAVAACUgFTAaUBIAEYAfAB/wEgARgB8AH/ASABGAHw
+        Af8BIAEYAfAB/wEgARgB8AH/AR8BFwHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEf
+        ARcB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/Aw8BEyAA
+        AxsBJgEHAcEC/wEHAcEC/wFfAmYB5SQAAlIBUQGkAbwBgwE8Af8BvAGCATwB/wG8AYMBPAH/AbwBgwE8
+        Af8BvAGDATwB/wG8AYMBPAH/AbwBggE8Af8BvAGCATwB/wG8AYMBPAH/AbwBgwE8Af8BvAGCATwB/wG8
+        AYIBPAH/AbsBgwE8Af8BvAGDATwB/wG8AYMBPAH/AbwBgwE8Af8BkwFhATwB+wMRARZUAAMZASICXAFt
+        Ae4BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEg
+        ARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AiEBqQH7
+        AzgBXCgAAVkCXAG+AQcBwQL/AyYBOCQAAxoBJAJpAWAB6AG7AX4BOQH/AbsBfgE6Af8BuwF/ATkB/wG7
+        AX4BOQH/AbsBfwE5Af8BuwF+ATkB/wG7AX4BOQH/AbsBfgE5Af8BuwF+ATkB/wG7AX4BOQH/AbsBfgE5
+        Af8BuwF+ATkB/wG7AX8BOQH/AbsBfgE5Af8BjAFqAUEB+QM5AV5cAAMoATsBVQFUAXsB8wEgARgB8AH/
+        ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEY
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEzASsBygH+AlMBVQGqAwMBBCgAAwUBBgMgAS0sAAMq
+        AT8BagFoAVsB8AG6AXoBNwH/AbsBewE3Af8BugF7ATcB/wG6AXsBNwH/AboBewE3Af8BuwF6ATcB/wG7
+        AXsBNwH/AbsBewE3Af8BuwF7ATcB/wG7AXoBNwH/AboBewE3Af8BuwF7ATcB/wGMAXoBKwH8A1IBowMF
+        AQZcAAQCAyoBPwJaAWgB6QEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEY
+        AfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8DSQGFAwYBCGAABAIDKQE+
+        AmkBYAHoAboBdwE0Af8BugF3ATQB/wG6AXcBNAH/AbkBdwE0Af8BugF3ATQB/wG6AXcBNAH/AboBdwE0
+        Af8BuQF3ATUB/wG6AXcBNQH/AboBdwE0Af8BugF3ATQB/wNIAYQDBgEIaAADGAEhAlQBVgGrAl4BawHt
+        ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/ASABGAHwAf8BIAEYAfAB/wEgARgB8AH/AiEBqgH7AlsBXQHF
+        AzQBU3AAAxoBJAJSAVEBpAFrAWUBXQHsAbkBdQEzAf8BuQF1ATMB/wG6AXQBMwH/AboBdAEzAf8BuQF1
+        ATIB/wG5AXQBMwH/AZIBXwEzAfsCXAFZAcMDMwFSBAJ0AAMJAQwCPQE+AWkDWgG/AmABaQHoAloBeAHy
+        A14B0gNMAY4BGgEZARoBI4AAAwYBBwI8ATsBZAJcAVkBvgFpAWcBWQHvAYIBcgFIAfgCYwFfAdUCSwFK
+        AYsDFAEbaAABQgFNAT4HAAE+AwABKAMAAVADAAEUAwABAQEAAQEFAAHwFwAD/wEAAfgBAQP/AfgBAQHw
+        BAAB4AEAAX8C/wHgAQABcAQAAcABAAE/Av8BwAEAATAEAAHAAQABHgEAAQMBgAEAARAEAAGAAQABHgEA
+        AQMBgAEAARAEAAGAAQABDgEAAQMBgAgAAQ4BAAEHCQABDwEAAQ8JAAEPAYABDwkAAQ8BwAEfCQABDwHA
+        AR8JAAEPAcABPwkAAQ8B4AF/CQABDwHwAX8HAAGAAQABDwHwAf8BgAYAAYABAAEfAfgB/wGAAQABEAQA
+        AcABAAEfAfkB/wHAAQABEAQAAcABAAE/Av8BwAEAATAEAAHwAQAD/wHwAQABcAQAAfwBAwP/AfwBAwHw
+        BAAL
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>83</value>
   </metadata>
