--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -391,4 +391,7 @@
   <data name="runnerconfig" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\runnerconfig.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="select_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\select_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
